@@ -356,13 +356,9 @@ with X.Org version &x11ver;.
 </para><para arch="mips">
 
 <!-- FIXME: mention explicit graphics chips and not system names -->
-The X.Org X Window System is only supported on the SGI Indy and the O2.  The
-Broadcom BCM91250A and BCM91480B evaluation boards have standard 3.3v PCI
-slots and support VGA emulation or Linux framebuffer on a selected range
-of graphics cards.  A <ulink url="&url-bcm91250a-hardware;">compatibility
-listing</ulink> for Broadcom evaluation boards is available.
+The X.Org X Window System is only supported on the SGI Indy and the O2.
 
-</para><para arch="mipsel">
+</para><para arch="mips;mipsel">
 
 The Broadcom BCM91250A and BCM91480B evaluation boards have standard 3.3v PCI
 slots and support VGA emulation or Linux framebuffer on a selected range
