@@ -27,7 +27,7 @@ Package installations from XPRAM and tape are not supported by this
 system.  All packages that you want to install need to be available on a
 DASD or over the network using NFS, HTTP or FTP.
 
-</para><para arch="mips">
+</para><para arch="mips;mipsel">
 
 The Broadcom BCM91250A evaluation board offers standard 3.3v 32 bit and 64
 bit PCI slots as well as USB connectors.  The Broadcom BCM91480B evaluation
@@ -35,10 +35,8 @@ board features four 64 bit PCI slots.
 
 </para><para arch="mipsel">
 
-The Broadcom BCM91250A evaluation board offers standard 3.3v 32 bit and 64
-bit PCI slots as well as USB connectors.  The Broadcom BCM91480B evaluation
-board features four 64 bit PCI slots.  The Cobalt RaQ has no support for
-additional devices but the Qube has one PCI slot.
+The Cobalt RaQ has no support for additional devices but the Qube has one
+PCI slot.
 
 </para>
  </sect2>
